syntax = "proto3";

package edu.usfca.protobuf;

// Each mobile device uses either Android or iOS.
enum OsType {
  UNKNOWN_OS_TYPE = 0;
  ANDROID = 1;
  IOS = 2;
}

// Device Id uniquely identifies a mobile device.
// It has $os (Ostype) and either uuid or webid (string), but not both.
message DeviceId {
  // Do NOT modify this. Do NOT add any more fields.
  OsType os = 1;
  
  // Note this "oneof" keyword.
  oneof id {
    // uuid: this is a typical "ad id" used by mobile devices (treat uuid as case-insensitive string).
    string uuid = 2;
    
    // webid: for now this can be an arbitrary, non-empty, case-sensitive string. we will not use this until much later.
    string webid = 3;
  }
}
